Fix animation in nb

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -50,7 +50,8 @@
     "%autoreload 2\n",
     "from dcem import dcem, dcem_ctrl\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "from IPython.display import Image"
    ]
   },
   {
@@ -400,7 +401,6 @@
    ],
    "source": [
     "os.system('convert plots/*.png +repage fig/learning.gif')\n",
-    "from IPython.display import Image\n",
     "Image(url='fig/learning.gif')  "
    ]
   },
@@ -564,9 +564,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"fig/pendulum.gif\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t_dir = 'plots'\n",
     "shutil.rmtree(t_dir, ignore_errors=True)\n",
@@ -589,19 +603,10 @@
     "    os.system(f'convert {fname} -trim {fname}')\n",
     "\n",
     "os.system('convert plots/*.png +repage fig/pendulum.gif')\n",
-    "shutil.rmtree('plots')\n",
-    "from IPython.display import Image\n",
-    "Image(url='fig/pendulum.gif')\n",
+    "shutil.rmtree(t_dir, ignore_errors=True)\n",
     "\n",
-    "shutil.rmtree(t_dir)"
+    "Image(url='fig/pendulum.gif')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
