--- a/paper/dcem.bib
+++ b/paper/dcem.bib
@@ -1,3 +1,5 @@
+% Copyright (c) Facebook, Inc. and its affiliates.
+
 @inproceedings{chua2018deep,
   title={Deep reinforcement learning in a handful of trials using probabilistic dynamics models},
   author={Chua, Kurtland and Calandra, Roberto and McAllister, Rowan and Levine, Sergey},
