--- a/paper/graph_model.tex
+++ b/paper/graph_model.tex
@@ -1,3 +1,5 @@
+% Copyright (c) Facebook, Inc. and its affiliates.
+
 \tikzset{>=latex}
 \begin{tikzpicture}[
 deterministic_variable/.style={rectangle, draw=black, fill=white, thin, minimum width=20pt, minimum height=20pt},
