--- a/paper/icml2020.sty
+++ b/paper/icml2020.sty
@@ -1,3 +1,4 @@
+% Copyright (c) Facebook, Inc. and its affiliates.
 % File: icml2020.sty (LaTeX style file for ICML-2020, version of 2020-12-17)
 
 % This file contains the LaTeX formatting parameters for a two-column 
