Tweak refs and intro

--- a/paper/dcem.bib
+++ b/paper/dcem.bib
@@ -1021,9 +1021,9 @@
   year={2019}
 }
 
-@misc{hydra,
+@Misc{hydra,
   author =       {Omry Yadan},
-  title =        {A framework for elegantly configuring complex applications},
+  title =        {Hydra - A framework for elegantly configuring complex applications},
   howpublished = {Github},
   year =         {2019},
   url =          {https://github.com/facebookresearch/hydra}
