--- a/paper/icml2020.sty
+++ b/paper/icml2020.sty
@@ -120,7 +120,7 @@
 %%%%%%%%%%%%%%%%%%%%
 \newcommand{\ICML@appearing}{\textit{Proceedings of the
 $\mathit{37}^{th}$ International Conference on Machine Learning},
-Vienna, Austria, PMLR 119, 2020.
+Online, PMLR 119, 2020.
 Copyright 2020 by the author(s).}
 
 %%%%%%%%%%%%%%%%%%%%
